--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "03-mongodb",
+  "name": "node-js-homeworks",
   "version": "1.0.0",
-  "description": "branch for node js hw-3-mongodb",
+  "description": "node js homeworks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon api/start.js"
   },
   "repository": {
     "type": "git",
@@ -26,12 +27,15 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.11",
-    "multer": "^1.4.2",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.6"
   }
 }
