--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Aztek2008/node-js-homeworks#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
     "avatar-builder": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -36,7 +37,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.11",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
